@@ -6,6 +6,8 @@ Because you have to know where your towel is.
 1.0a4 (unreleased)
 ^^^^^^^^^^^^^^^^^^
 
+- Vocabularies terms are now shown sorted; tests added. [hvelarde]
+
 - Replaced the UserFriendlyTypes vocabulary in favor of
   ReallyUserFriendlyTypes. [frapell]
 
